AC_INIT(jfs.c)

AM_INIT_AUTOMAKE(jfs, 0.0.1)

AM_CONFIG_HEADER(config.h)

AC_PREFIX_DEFAULT()

dnl Checks for programs.
AC_PROG_CC

dnl Checks for libraries.
dnl AC_CHECK_LIB(diskfs, diskfs_check_readonly)
dnl AC_CHECK_LIB(fshelp, fshelp_aquire_lock)
dnl AC_CHECK_LIB(ihash, ihash_create)
dnl AC_CHECK_LIB(iohelp, iohelp_initialize_conch)
dnl AC_CHECK_LIB(pager, pager_get_port)
dnl AC_CHECK_LIB(ports, ports_create_bucket)
dnl AC_CHECK_LIB(shouldbeinlibc, device_map)
dnl AC_CHECK_LIB(store, store_free)
dnl AC_CHECK_LIB(pthread, pthread_exit)

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_DIRENT

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_MODE_T
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_STRUCT_ST_BLKSIZE
AC_STRUCT_ST_BLOCKS
AC_STRUCT_ST_RDEV
AC_TYPE_UID_T

dnl Checks for library functions.
AC_FUNC_MMAP

AC_OUTPUT(Makefile)
